--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "drei": "^2.2.21",
     "formik": "^2.2.9",
     "formik-mui": "^5.0.0-alpha.0",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "react-scripts": "5.0.1",
+    "react-three-fiber": "^6.0.13",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
+    "three": "^0.152.2",
     "web-vitals": "^2.1.4",
     "yup": "^1.1.1"
   },
